--- a/VSCODE/Jenkinsfile
+++ b/VSCODE/Jenkinsfile
@@ -1,31 +1,18 @@
 pipeline {
-    agent { 
-	   dockerfile  {
-			filename 'Dockerfile.txt'
-			dir 'IMG' 
-		} 
-	}
-    triggers {
-        pollSCM('H/2 * * * *') 
-    }
+    agent none 
     stages {
-	    stage('Test') {
+        stage('Example Build') {
+            agent { docker 'maven:3.9.0-eclipse-temurin-11' } 
             steps {
-                sh 'node --version'
-                sh 'svn --version'
+                echo 'Hello, Maven'
+                sh 'mvn --version'
             }
         }
-        stage('Example') {
-            input {
-                message "Should we continue?"
-                ok "Yes, we should."
-                submitter "alice,bob"
-                parameters {
-                    string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
-                }
-            }
+        stage('Example Test') {
+            agent { docker 'openjdk:8-jre' } 
             steps {
-                echo "Hello, ${PERSON}, nice to meet you."
+                echo 'Hello, JDK'
+                sh 'java -version'
             }
         }
     }
